--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ coreschema==0.0.4
 Django==4.2.2
 django-ckeditor==6.5.1
 django-cors-headers==4.0.0
-django-jazzmin==2.6.0
 django-js-asset==2.0.0
 djangorestframework==3.14.0
 drf-yasg==1.21.5
@@ -25,3 +24,5 @@ sqlparse==0.4.4
 typing_extensions==4.6.3
 uritemplate==4.1.1
 urllib3==2.0.3
+django-environ==0.10.0
+
